fix image on Safari

--- a/less/plugin-blog.less
+++ b/less/plugin-blog.less
@@ -174,6 +174,8 @@
         .post-image .image {
             position: absolute;
             transform: translate(-50%);
+            -webkit-transform: translate(-50%);
+            -ms-transform: translate(-50%);
             max-width: inherit;
             height: 275px;
             max-height: 275px;
